force-app/main/default/objects/Fitness_Device_Metric_c_Home__dll/Fitness_Device_Metric_c_Home__dll.object-meta.xml
<CustomObject>
    <label>Fitness_Device_Metric__c_Home</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>