force-app/main/default/objects/Fitness_Device_Metric_c_Home__dll/fields/Duration_c__c.field-meta.xml
<CustomField>
    <fullName>Duration_c__c</fullName>
    <label>Duration</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Duration_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>