force-app/main/default/objects/Fitness_Device_Metric_c_Home__dll/fields/KQ_Workout_ID_c__c.field-meta.xml
<CustomField>
    <fullName>KQ_Workout_ID_c__c</fullName>
    <label>KQ_Workout_ID_c</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_Workout_ID_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>