force-app/main/default/objects/Fitness_Device_Metric_c_Home__dll/fields/Workout_Date_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Workout_Date_Time_c__c</fullName>
    <label>Workout Date/Time</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Workout_Date_Time_c</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>