force-app/main/default/objects/Fitness_Device_Metric_c_Home__dll/fields/Workout_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Workout_Type_c__c</fullName>
    <label>Workout Type</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Workout_Type_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>